[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.94" # Ties to codecrafters buildpack

[dependencies]
anyhow = "1.0.59"                                   # error handling
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
#http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.11.1"
http-body-util = "0.1.3"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
unescaped_backticks = "warn"
missing_crate_level_docs = "warn"
