[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.94" # Ties to codecrafters buildpack

[dependencies]
anyhow = "1.0.59"                                   # error handling
tokio = { version = "1", features = ["full"] }
#bytes = "1.11.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }


[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
unescaped_backticks = "warn"
missing_crate_level_docs = "warn"
